whoami-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: whoami
  name: whoami-lb
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 8000
    targetPort: http
  selector:
    app: whoami
