whoami-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  # annotations:
  #   cert-manager.io/cluster-issuer: "letsencrypt-http"
spec:
  ingressClassName: traefik
  rules:
  # ATTENTION : spécifique vagrantbox
  - host: whoami.dev.quadtreeworld.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: whoami
            port:
              number: 80
  # tls:
  # - hosts:
  #   - whoami.dev.quadtreeworld.net
  #   secretName: whoami-cert
